--- a/src/components/ui/Textarea.astro
+++ b/src/components/ui/Textarea.astro
@@ -37,6 +37,10 @@ const props = Astro.props;
 			background-color: var(--color-base-3);
 		}
 
+		&:disabled {
+			opacity: var(--opacity-hover);
+		}
+
 		&::-webkit-scrollbar {
 			width: var(--padding-xs);
 		}
