perf: remove unused and unnecessary CSS variables

--- a/src/components/ui/Form.astro
+++ b/src/components/ui/Form.astro
@@ -31,7 +31,7 @@ const props = Astro.props;
 				}
 
 				&:has(> input:hover) {
-					opacity: var(--opacity-max);
+					opacity: 1;
 					box-shadow: var(--box-shadow-base);
 				}
 			}
