--- a/src/components/ui/Label.astro
+++ b/src/components/ui/Label.astro
@@ -35,7 +35,7 @@ const props = Astro.props;
 		}
 
 		&:has(> input:active) {
-			opacity: var(--opacity-max);
+			opacity: 1;
 		}
 
 		&:has(> input[type='checkbox']:not(:checked)) {
@@ -51,7 +51,7 @@ const props = Astro.props;
 			font-weight: var(--font-weight-bolder);
 			background: var(--color-base-3);
 			box-shadow: var(--box-shadow-base);
-			opacity: var(--opacity-max);
+			opacity: 1;
 			box-shadow: var(--box-shadow-base);
 			z-index: 1;
 
