--- a/src/components/ui/Link.astro
+++ b/src/components/ui/Link.astro
@@ -66,7 +66,7 @@ rel = [...relsSet].join(' ');
 		}
 
 		&:active {
-			opacity: var(--opacity-max);
+			opacity: 1;
 		}
 
 		&:not(:has(img, svg)) {
