--- a/src/components/ui/Textarea.astro
+++ b/src/components/ui/Textarea.astro
@@ -17,7 +17,7 @@ const props = Astro.props;
 
 <style>
 	textarea {
-		min-height: var(--min-height-textarea);
+		min-height: 18rem;
 		max-height: var(--max-width-page);
 		border: none;
 		padding: var(--padding-base);
