perf: move theme preload script to page head

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,6 +3,10 @@ import { THEME } from '@lib/config/theme.ts';
 import { getLocale } from '@lib/i18n/index.ts';
 import type { WithChildren } from '../types.ts';
 import Head from './Head.astro';
+import '../styles/base.css';
+import '../styles/vars.css';
+import '../styles/themes.css';
+import '../styles/utils.css';
 
 /**
  * Props for the base HTML layout wrapper.
@@ -22,19 +26,17 @@ const vars = {
 <html lang={currentLocaleId} data-theme={THEME.default.id}>
 	<Head>
 		<slot name="head" />
+		<!-- Load the theme from localStorage as soon as possible to prevent FOUC -->
+		<script is:inline async type="module" define:vars={vars}>
+			document.documentElement.dataset[key] =
+				localStorage.getItem(key) ?? defaultThemeId;
+		</script>
 	</Head>
 
 	<body>
 		<slot />
 	</body>
 </html>
-
-<style is:global>
-	@import '../styles/base.css';
-	@import '../styles/vars.css';
-	@import '../styles/themes.css';
-	@import '../styles/utils.css';
-</style>
 
 <style>
 	body {
@@ -52,12 +54,6 @@ const vars = {
 		line-height: 1.5;
 	}
 </style>
-
-<!-- Load the theme from localStorage as soon as possible to prevent FOUC -->
-<script is:inline async type="module" define:vars={vars}>
-	document.documentElement.dataset[key] =
-		localStorage.getItem(key) ?? defaultThemeId;
-</script>
 
 <script>
 	import { CLASS } from '@lib/config/class.ts';
