perf: shorten CSS variable names

--- a/src/components/app/Footer.astro
+++ b/src/components/app/Footer.astro
@@ -42,12 +42,12 @@ const props = Astro.props;
 		flex-direction: row;
 		justify-content: space-around;
 		align-items: start;
-		gap: var(--padding-base);
+		gap: var(--p-md);
 		flex-wrap: wrap;
 		box-sizing: border-box;
-		padding: var(--padding-lg);
-		background-color: var(--color-base-2);
-		box-shadow: var(--box-shadow-base);
+		padding: var(--p-lg);
+		background-color: var(--bg-2);
+		box-shadow: var(--box-shadow-md);
 		view-transition-name: footer;
 
 		> * {
