--- a/src/components/app/ThemeSelector.astro
+++ b/src/components/app/ThemeSelector.astro
@@ -47,10 +47,10 @@ const entries: EntryProps[] = entriesOf(THEME.map).map(([themeId, theme]) => ({
 		label {
 			background: linear-gradient(
 				90deg,
-				var(--color-base-1) 0%,
-				var(--color-base-1) 49.9%,
-				var(--color-base-2) 50.1%,
-				var(--color-base-2) 100%
+				var(--bg-1) 0%,
+				var(--bg-1) 49.9%,
+				var(--bg-2) 50.1%,
+				var(--bg-2) 100%
 			);
 		}
 	}
