--- a/src/components/app/home/LabelledOutput.astro
+++ b/src/components/app/home/LabelledOutput.astro
@@ -30,7 +30,7 @@ const label = msg.map[id].label;
 	label {
 		flex-direction: column;
 		flex: 1;
-		padding: var(--padding-base);
-		background-color: var(--color-base-2);
+		padding: var(--p-md);
+		background-color: var(--bg-2);
 	}
 </style>
