--- a/src/components/ui/ButtonLink.astro
+++ b/src/components/ui/ButtonLink.astro
@@ -32,11 +32,11 @@ const { icon: Icon, label, ...restProps } = Astro.props;
 		flex-direction: row;
 		justify-content: center;
 		align-items: center;
-		gap: var(--padding-xs);
+		gap: var(--p-xs);
 		flex-grow: 1;
-		padding: var(--padding-sm);
-		background: var(--color-base-2);
-		color: var(--color-text);
+		padding: var(--p-sm);
+		background: var(--bg-2);
+		color: var(--fg);
 		text-align: center;
 		white-space: nowrap;
 		cursor: pointer;
