--- a/src/components/ui/Form.astro
+++ b/src/components/ui/Form.astro
@@ -24,15 +24,15 @@ const props = Astro.props;
 
 		&:hover {
 			> label {
-				transition-duration: var(--transition-duration-base);
+				transition-duration: var(--duration-md);
 
 				&:has(> input) {
-					opacity: var(--opacity-hover);
+					opacity: var(--opacity-md);
 				}
 
 				&:has(> input:hover) {
 					opacity: 1;
-					box-shadow: var(--box-shadow-base);
+					box-shadow: var(--box-shadow-md);
 				}
 			}
 		}
