--- a/src/components/ui/Link.astro
+++ b/src/components/ui/Link.astro
@@ -59,10 +59,10 @@ rel = [...relsSet].join(' ');
 <style>
 	a {
 		text-decoration: none;
-		transition-duration: var(--transition-duration-base);
+		transition-duration: var(--duration-md);
 
 		&:hover {
-			opacity: var(--opacity-hover);
+			opacity: var(--opacity-md);
 		}
 
 		&:active {
@@ -70,9 +70,9 @@ rel = [...relsSet].join(' ');
 		}
 
 		&:not(:has(img, svg)) {
-			padding-block-end: var(--border-width-base);
-			color: var(--color-primary);
-			border-block-end: var(--border-width-base) solid var(--color-primary);
+			padding-block-end: var(--border-md);
+			color: var(--primary);
+			border-block-end: var(--border-md) solid var(--primary);
 		}
 	}
 </style>
