--- a/src/components/ui/Output.astro
+++ b/src/components/ui/Output.astro
@@ -29,8 +29,8 @@ const { id, ...restProps } = Astro.props;
 
 <style>
 	output {
-		font-family: var(--font-family-header);
-		font-size: var(--font-size-lg);
-		font-weight: var(--font-weight-bold);
+		font-family: var(--font-header);
+		font-size: var(--font-lg);
+		font-weight: var(--bold);
 	}
 </style>
