--- a/src/components/ui/Strong.astro
+++ b/src/components/ui/Strong.astro
@@ -16,6 +16,6 @@ const props = Astro.props;
 
 <style>
 	strong {
-		font-weight: var(--font-weight-bold);
+		font-weight: var(--bold);
 	}
 </style>
