--- a/src/components/ui/Textarea.astro
+++ b/src/components/ui/Textarea.astro
@@ -18,15 +18,15 @@ const props = Astro.props;
 <style>
 	textarea {
 		min-height: 18rem;
-		max-height: var(--max-width-page);
+		max-height: var(--max-w);
 		border: none;
-		padding: var(--padding-base);
-		background-color: var(--color-base-2);
-		color: var(--color-text);
-		font-family: var(--font-family-base);
-		font-size: var(--font-size-base);
-		font-weight: var(--font-weight-base);
-		transition-duration: var(--transition-duration-base);
+		padding: var(--p-md);
+		background-color: var(--bg-2);
+		color: var(--fg);
+		font-family: var(--font-base);
+		font-size: var(--font-md);
+		font-weight: var(--normal);
+		transition-duration: var(--duration-md);
 		resize: block;
 		view-transition-name: input;
 		line-height: inherit;
@@ -34,29 +34,29 @@ const props = Astro.props;
 		overflow-y: auto;
 
 		&:focus {
-			background-color: var(--color-base-3);
+			background-color: var(--bg-3);
 		}
 
 		&:disabled {
-			opacity: var(--opacity-hover);
+			opacity: var(--opacity-md);
 		}
 
 		&::-webkit-scrollbar {
-			width: var(--padding-xs);
+			width: var(--p-xs);
 		}
 
 		&::-webkit-scrollbar-thumb {
-			border-radius: var(--border-radius-base);
-			background-color: var(--color-text);
-			box-shadow: var(--box-shadow-base);
+			border-radius: var(--radius-md);
+			background-color: var(--fg);
+			box-shadow: var(--box-shadow-md);
 			cursor: pointer;
 		}
 
 		&::placeholder {
 			color: color-mix(
 				in oklch shorter hue,
-				var(--color-text),
-				transparent var(--color-mix-ratio-lg)
+				var(--fg),
+				transparent var(--mix-lg)
 			);
 		}
 	}
