--- a/src/components/ui/Card.astro
+++ b/src/components/ui/Card.astro
@@ -20,13 +20,13 @@ const { as: Tag = 'div', ...restProps } = Astro.props;
 
 <style>
 	* {
-		border-radius: var(--border-radius-base);
-		box-shadow: var(--box-shadow-base);
+		border-radius: var(--radius-md);
+		box-shadow: var(--box-shadow-md);
 		overflow: hidden;
 
 		/* Outlines are cut off when using `overflow: hidden` so use a negative offset instead */
 		> * {
-			outline-offset: calc(-1 * var(--padding-xs));
+			outline-offset: calc(-1 * var(--p-xs));
 		}
 	}
 </style>
