perf: add contain CSS property to various elements

--- a/src/components/ui/Card.astro
+++ b/src/components/ui/Card.astro
@@ -23,6 +23,7 @@ const { as: Tag = 'div', ...restProps } = Astro.props;
 		border-radius: var(--radius-md);
 		box-shadow: var(--box-shadow-md);
 		overflow: hidden;
+		contain: paint;
 
 		/* Outlines are cut off when using `overflow: hidden` so use a negative offset instead */
 		> * {
