--- a/src/components/ui/Output.astro
+++ b/src/components/ui/Output.astro
@@ -32,5 +32,6 @@ const { id, ...restProps } = Astro.props;
 		font-family: var(--font-header);
 		font-size: var(--font-lg);
 		font-weight: var(--bold);
+		contain: content;
 	}
 </style>
