--- a/src/components/ui/Textarea.astro
+++ b/src/components/ui/Textarea.astro
@@ -32,6 +32,7 @@ const props = Astro.props;
 		line-height: inherit;
 		/* Revert `overflow:hidden` set by Card */
 		overflow-y: auto;
+		contain: strict;
 
 		&:focus {
 			background-color: var(--bg-3);
