--- a/src/components/ui/Strong.astro
+++ b/src/components/ui/Strong.astro
@@ -10,9 +10,8 @@ type Props = WithChildren<true, HTMLAttributes<'strong'>>;
 const props = Astro.props;
 ---
 
-<strong {...props}>
-	<slot />
-</strong>
+<!-- This must be on the same line to prevent whitespace from being inserted -->
+<strong {...props}><slot /></strong>
 
 <style>
 	strong {
