--- a/src/components/ui/Link.astro
+++ b/src/components/ui/Link.astro
@@ -52,9 +52,8 @@ if (isExternalUrl(href)) {
 rel = [...relsSet].join(' ');
 ---
 
-<a {href} {rel} title={tooltip} aria-label={tooltip} {...restProps}>
-	<slot />
-</a>
+<!-- This must be on the same line to prevent whitespace from being inserted -->
+<a {href} {rel} title={tooltip} aria-label={tooltip} {...restProps}><slot /></a>
 
 <style>
 	a {
