fix: alert component title doesn't support localization

--- a/src/components/ui/Alert.astro
+++ b/src/components/ui/Alert.astro
@@ -1,21 +1,26 @@
 ---
+import { getLocaleStrings } from '@lib/i18n/index.ts';
+import { Info } from '@lucide/astro';
 import type { HTMLAttributes } from 'astro/types';
 import type { WithChildren } from '../../types.ts';
 
 /**
  * Props for an alert/notification blockquote with configurable styling. Used by Markdoc.
- *
- * @property type - The alert type determining the icon and styling (default: 'info')
  */
-interface Props extends WithChildren<true, HTMLAttributes<'blockquote'>> {
-	type?: 'info';
-}
+type Props = WithChildren<true, HTMLAttributes<'blockquote'>>;
 
-const { type = 'info', ...restProps } = Astro.props;
+const msg = getLocaleStrings(Astro).alert.note.title;
+
+const props = Astro.props;
 ---
 
-<!-- This must be on the same line to prevent whitespace from being inserted -->
-<blockquote data-type={type} {...restProps}><slot /></blockquote>
+<blockquote {...props}>
+	<h4>
+		<Info size={16} aria-hidden="true" />
+		{msg}
+	</h4>
+	<slot />
+</blockquote>
 
 <style>
 	blockquote {
@@ -32,13 +37,17 @@ const { type = 'info', ...restProps } = Astro.props;
 			font-weight: var(--bold);
 		}
 
+		h4 {
+			display: inline-flex;
+			flex-direction: row;
+			align-items: center;
+			gap: var(--p-xs);
+			margin-block-start: 0;
+			color: var(--primary);
+		}
+
 		p {
 			margin: 0;
 		}
-	}
-
-	[data-type='info']::before {
-		content: 'ⓘ Note';
-		color: var(--primary);
 	}
 </style>
