--- a/src/components/ui/ButtonLink.astro
+++ b/src/components/ui/ButtonLink.astro
@@ -26,7 +26,7 @@ const { icon: Icon, label, ...restProps } = Astro.props;
 
 <style>
 	a {
-		display: flex;
+		display: inline-flex;
 		flex-direction: row;
 		justify-content: center;
 		align-items: center;
